--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<!--- ICS2O-My first PWA --->
+<!--- ICS2O-Unit5-06-JS --->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="XXX" />
+    <meta
+      name="description"
+      content="Positive Integer Multiplication Program"
+    />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content=".Claire Bedrossian" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>XXX</title>
+    <title>Positive Integer Multiplication</title>
     <link
       rel="canonical"
-      href="https://Claire-Bedrossian.github.io/ICS2O-PWA-Test/"
+      href="https://Claire-Bedrossian.github.io/ICS2O-Unit5-06-JS/"
     />
-    <link rel="manifest" href="/ICS2O-PWA-Test/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS2O-Unit5-06-JS/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
@@ -45,35 +48,44 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>XXX</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">XXX</span>
+          <span class="mdl-layout-title">Positive Integer Multiplication</span>
         </div>
       </header>
       <main class="mdl-layout__content">
+        <p>Formula: Sn = (n ÷ 2) x (n + 1) </p>
         <p></p>
-        <img
-          src="./images/notebook-animation.svg"
-          alt="Computer"
-          width="25%"
-          height="25%"
-        />
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <div class="mdl-textfield mdl-js-textfield">
+            <input
+              class="mdl-textfield__input"
+              type="text"
+              pattern="-?[0-9]*(\.[0-9]+)?"
+              id="integer-a"
+            />
+            <label class="mdl-textfield__label" for="integer-n"
+              >Input value n...</label
+            >
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
         <p></p>
         <!-- Raised button with ripple -->
         <button
           class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="myButtonClicked()"
         >
-          Say "Hello, World!"
+          Calculate
         </button>
         <!-- basic text -->
         <p></p>
-        <div id="hello-world"></div>
+        <div id="multiplication-product"></div>
       </main>
     </div>
   </body>
