commit not finished

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </button>
         <!-- basic text -->
         <p></p>
-        <div id="multiplication-product"></div>
+        <div id="product"></div>
       </main>
     </div>
   </body>
