--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!--- ICS2O-Unit5-06-JS --->
+<!--- ICS2O-Unit5-07-JS --->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Positive Integer Multiplication Program"
+      content="Sum of Natural Numbers"
     />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content=".Claire Bedrossian" />
@@ -14,9 +14,9 @@
     <title>Positive Integer Multiplication</title>
     <link
       rel="canonical"
-      href="https://Claire-Bedrossian.github.io/ICS2O-Unit5-06-JS/"
+      href="https://Claire-Bedrossian.github.io/ICS2O-Unit5-07-JS/"
     />
-    <link rel="manifest" href="/ICS2O-Unit5-06-JS/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS2O-Unit5-07-JS/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
@@ -54,7 +54,7 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Positive Integer Multiplication</span>
+          <span class="mdl-layout-title">Sum of Natural Numbers</span>
         </div>
       </header>
       <main class="mdl-layout__content">
@@ -67,7 +67,7 @@
               class="mdl-textfield__input"
               type="text"
               pattern="-?[0-9]*(\.[0-9]+)?"
-              id="integer-a"
+              id="integer-n"
             />
             <label class="mdl-textfield__label" for="integer-n"
               >Input value n...</label
@@ -85,7 +85,7 @@
         </button>
         <!-- basic text -->
         <p></p>
-        <div id="product"></div>
+        <div id="sum"></div>
       </main>
     </div>
   </body>
