--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content=".Claire Bedrossian" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Positive Integer Multiplication</title>
+    <title>Sum of Natural Numbers</title>
     <link
       rel="canonical"
       href="https://Claire-Bedrossian.github.io/ICS2O-Unit5-07-JS/"
